--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -844,7 +844,7 @@ testing, and organization. You can add more quality by asking these questions:
 - What does one record represent? We should document this - this helps our team  
 understand what they're working with.
 - What assumptions about our data are we making? We should test these - this  
-ensures that our assumptions remain true through our iterations.
+ensures that our assumptions remain true through our iterations on the code.
 - Are we using naming patterns? We should! This helps us keep things organized
 and understandable at a glance.
 
