--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -895,8 +895,8 @@ together our cleaned data.
 - Within the subfolders, we have a our configurations and models that relate to
 each source.
 - Our marts folder contains a subfolder that relates to the area of business our
-models apply to - right now we have core, but we could also add for others such
-as product and marketing.
+models apply to - right now we have core, but we could also add subfolders for
+others such as product and marketing.
 - Similar to our staging area, we keep configuration files within the folder of 
 the models they seek to describe.
 - And lastly, you can see that we've used our naming conventions for each model.
