--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -56,9 +56,7 @@ new payment method was introduced)
 
 
 ---
-???
 
-Read aloud the text on the slides: 
 
 # Sources may be right for you!
 
@@ -71,6 +69,9 @@ Read aloud the text on the slides:
     - Custom: whatever you want!
 --
 - Test the freshness of loaded data, based on thresholds you define
+
+???
+Read aloud the text on the slides: 
 
 ---
 
@@ -86,12 +87,7 @@ Read aloud the text on the slides:
 
 # Defining sources
 
-???
 
-- Sources are defined in `.yml` files in your `models/` directory, where they have to be nested under a source key. 
-You will have to provide a source name, which is usually the name of the schema of your raw table. Snowflake users,
-you can also provide a database name and then after that you can list your table names. 
-- If one of your source tables is badly named, there is also an opportunity for you to provide an alias using the identifier key.
 
 Sources are defined in `.yml` files in your `models/` directory.
 
@@ -111,15 +107,14 @@ sources:
         identifier: orders
 
 ```
-
+???
+- Sources are defined in `.yml` files in your `models/` directory, where they have to be nested under a source key. 
+You will have to provide a source name, which is usually the name of the schema of your raw table. Snowflake users,
+you can also provide a database name and then after that you can list your table names. 
+- If one of your source tables is badly named, there is also an opportunity for you to provide an alias using the identifier key.
 ---
 
 # Selecting from sources
-
-???
-
-  - Once you have defined a source in your .yml file, you can now utilize the source Jinja function to select from that source in a model. 
-  - The source function here will compile to the full object name in the database, so select star from source-jaffleshop will compile to raw.jaffleshop.customers, with the database name raw, which is **clicks back** how we defined it in our yml file.
 
 Use the {% raw %}`{{ source() }}`{% endraw %} function to select from a source in a model:
 
@@ -156,7 +151,8 @@ renamed as (
 ]
 
 ???
-
+  - Once you have defined a source in your .yml file, you can now utilize the source Jinja function to select from that source in a model. 
+  - The source function here will compile to the full object name in the database, so select star from source-jaffleshop will compile to raw.jaffleshop.customers, with the database name raw, which is **clicks back** how we defined it in our yml file.
 **Demo:** Pause the deck here and jump into the IDE to show the following:
 - Creating a .yml file and configuring sources (use text on Defining Sources slide)
 - Changing the direct table references in the stg_customers model
@@ -175,10 +171,6 @@ They help users understand where data comes from (lineage)
 ---
 
 # Testing sources
-
-?? 
-
-Can you add tests to sources? Yes you can and you absolutely should! If there's something wrong with your data, you will be able to see if it was caused by something going wrong in your source data, or in one of your models.
 
 .denser-text[
 
@@ -214,6 +206,8 @@ This allows you to debug more quickly!
 
 ]
 
+???
+Can you add tests to sources? Yes you can and you absolutely should! If there's something wrong with your data, you will be able to see if it was caused by something going wrong in your source data, or in one of your models.
 
 ---
 
@@ -229,17 +223,6 @@ This can be helpful in deployment - coming up soon
 
 
 # Feeling fresh?
-
-
-???
-
-  - Now that we've defined our sources and we know how to test them ** jump back to intro slide ** 
-  - Has that ever happened to you before? And if it has happened to you, do you have a reliable way of capturing that?
-
-  - dbt has a command called source freshness that will allow you to check the freshness of your source tables. All you need to do is add a loaded_at field to your source definition, and under that add a freshness block.
-  - The loaded_at field should be a column from the source data that reliably captures when that row was loaded into the warehouse. This usually something like an updated_at field. 
-  - Your freshness blocks will then determine define the acceptable amount of time between the most recent record, and now, for a table to be considered "fresh". 
-In this example, we have configured checks to run essentially every 12 hours. 
 
 Optionally, specify a `loaded_at_field` and `freshness`:
 
@@ -272,6 +255,15 @@ sources:
 
 Then run `dbt source freshness`
 
+???
+  - Now that we've defined our sources and we know how to test them ** jump back to intro slide ** 
+  - Has that ever happened to you before? And if it has happened to you, do you have a reliable way of capturing that?
+
+  - dbt has a command called source freshness that will allow you to check the freshness of your source tables. All you need to do is add a loaded_at field to your source definition, and under that add a freshness block.
+  - The loaded_at field should be a column from the source data that reliably captures when that row was loaded into the warehouse. This usually something like an updated_at field. 
+  - Your freshness blocks will then determine define the acceptable amount of time between the most recent record, and now, for a table to be considered "fresh". 
+In this example, we have configured checks to run essentially every 12 hours. 
+
 
 ---
 ## Snapshotting freshness
@@ -290,7 +282,8 @@ Found 5 models, 20 tests, 0 snapshots, 0 analyses, 130 macros, 0 operations, 0 s
 ```
 ]
 
-?? Running the command dbt source snapshot freshness will give you an output like this: 
+???
+Running the command dbt source snapshot freshness will give you an output like this: 
 
 ### How does dbt check freshness?
 
@@ -324,10 +317,6 @@ from raw.stripe.payment
 
 .left-column-33[
 
-???
-
-Behind the scenes, dbt will calculate the difference between the max of the loaded_at field, so the most recent row uploaded, and the time at which the snapshot is being run. The results of this query are used to determine whether the source is fresh or not. 
-
 ## In dbt Cloud:
 
 Adding this step to a job helps you understand if one of your data sources is out of date.
@@ -342,6 +331,7 @@ dbt source freshness
 ]
 
 ???
+Behind the scenes, dbt will calculate the difference between the max of the loaded_at field, so the most recent row uploaded, and the time at which the snapshot is being run. The results of this query are used to determine whether the source is fresh or not. 
 
 **Demo:** Use this an opportunity to demonstrate the source-freshness feature.  Do the following over in dbt Cloud:
 - Copy the freshness configuration from `Feeling Fresh?` slide
@@ -407,8 +397,8 @@ from {{ source('event_data', 'events') }}
 
 **Check for Understanding:** Ask the group to predict what the code on the right will compile to based on the YML file on the left.  Learners will have to pay close attention to the YML configuration
 
-Slide 1: Compiles to `raw.snowplow.events`
-Slide 2: Compiled to `raw.stripe.payments`
+- Slide 1: Compiles to `raw.snowplow.events`
+- Slide 2: Compiled to `raw.stripe.payments`
 
 ---
 
