Fixed typo in speaker notes

--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -212,7 +212,7 @@ collects all the configurations first and then executes, which means that you
 can separate tests out by folder or you can keep all your tests in one big file.  
 Our best practice is to separate by folder.  
   
-The other important piece here is that dbt testa operate on the return of
+The other important piece here is that dbt tests operate on the return of
 rows that that shouldn't be in the table.
 ---
 
