--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -1316,7 +1316,7 @@ When creating a dbt project:
 - First decide on the final artifact, and then sketch out the process for modeling it.
 - Use the three interfaces to organize your models.
 - Stage your raw source data before transforming it.
-- Every model should have a primary key.
+- Be aware of the columns that make each row unique in your models.
 - Decide as an organization how to keep your BI layer thin and flexible.
   
 ""  
