More wording changes

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -645,9 +645,9 @@ Make sure that for each model, you ask:
 - Am I using naming patterns? You should!
 
 ???
-[Teacher Note]:
-Transitioning: Some good practices to go along with building your DAG are  
-documentation, testing, and organization.  
+[Teacher Note]:  
+You can position this by saying something like:  
+"Some good practices to go along with building your DAG are..."  
 
 ---
 
