--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -72,7 +72,7 @@ $ dbt deps
 
 ???
 Demo Time:
-* add packageby navigating to https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/ and copying yml
+* add package by navigating to https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/ and copying yml
 * run `dbt deps` command
 * Show the  modules directory
 * Note that these are .gitignored
@@ -108,8 +108,8 @@ Demo Time:
 
 ???
 Demo Time:
-* create date spline model `util_days.sql`
-* run date spline via "Preview" button
+* create date spine model `util_days.sql`
+* run date spine via "Preview" button
 * show compiled SQL
 ---
 ## Use case: Using macros from a package
