more specific directions

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -171,7 +171,12 @@ See if anyone wants to have a go at explaining a model
 
 ???
 Demo Time:
-- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
+- Jump over into dbt Cloud _Group Training project: https://cloud.getdbt.com/#/accounts/26712/projects/43345/develop/
+- Look at the model `customers.sql`
+- Show the SQL select statement. 
+- Talk about SQL & Jinja working together
+- Hit `Compile` to show Jinja compiles to SQL
+- Hit 'Preview' to show that it outputs data
 
 ---
 # To use dbt you need:
