update CSS with demo prompt as an includes option

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -160,14 +160,8 @@ See if anyone wants to have a go at explaining a model
 <img src="/ui/img{{page.id}}/model.png" style="width: 50%;">
 ]
 
----
-## demo
-
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
-]
+--
+{% include options/demo_prompt.html %}
 
 ???
 Demo Time:
@@ -309,14 +303,9 @@ Snowflake console
     * `tags: ['nightly', 'hourly']`
     * `enabled: True`
 
----
-## demo
-
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
-]
+--
+{% include options/demo_prompt.html %}
+    
 
 ???
 Demo Time:
