--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -172,14 +172,11 @@ One of the following values:
 {% endraw %}
 ???
 - Docs blocks are great for special formatting but also allow for more modular documentation. A given .md file can be referenced and used in multiple descriptions without having to copy and paste any text. 
----
-## demo
 
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
-]
+--
+
+{% include options/demo_prompt.html %}  
+
 
 ???
 Demo Time:
