--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -61,14 +61,9 @@ Note: you can also install a package from a git URL, or from a local directory.
 ```shell
 $ dbt deps
 ```
----
-## demo
 
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
-]
+--
+{% include options/demo_prompt.html %}  
 
 ???
 Demo Time:
@@ -97,14 +92,8 @@ Demo Time:
 ```
 {% endraw %}
 
----
-## demo
-
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
-]
+--
+{% include options/demo_prompt.html %}  
 
 ???
 Demo Time:
