Revert "update CSS with demo prompt as an includes option"
This reverts commit 94df221a849dc3300aacd651bc3344243871521b.

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -160,8 +160,14 @@ See if anyone wants to have a go at explaining a model
 <img src="/ui/img{{page.id}}/model.png" style="width: 50%;">
 ]
 
---
-{% include options/demo_prompt.html %}
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -303,9 +309,14 @@ Snowflake console
     * `tags: ['nightly', 'hourly']`
     * `enabled: True`
 
---
-{% include options/demo_prompt.html %}
-    
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
