--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -86,9 +86,14 @@ The scheduler in dbt Cloud is purpose built for running dbt jobs on a schedule.
 - This is what your Home Dashboard will look like once you have jobs running in Production.
 - You'll see successes, errors, etc. and you can click through each invocation of a job for more information.
 
---
-{% include options/demo_prompt.html %}  
+---
+## demo
 
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
