--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -61,9 +61,14 @@ Note: you can also install a package from a git URL, or from a local directory.
 ```shell
 $ dbt deps
 ```
+---
+## demo
 
---
-{% include options/demo_prompt.html %}  
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -92,8 +97,14 @@ Demo Time:
 ```
 {% endraw %}
 
---
-{% include options/demo_prompt.html %}  
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
