--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -136,8 +136,7 @@ renamed as (
 ```
 {% endraw %}
 ]
-???
-Demo: Open and talk through the use of source in model stg_customers. Press compile to demo how the source function gets compiled to the full object name.
+
 --
 
 .right-column[
@@ -156,31 +155,25 @@ renamed as (
 {% endraw %}
 ]
 
-???
-  - Once you have defined a source in your .yml file, you can now utilize the source Jinja function to select from that source in a model. 
-  - The source function here will compile to the full object name in the database, so select star from source-jaffleshop will compile to raw.jaffleshop.customers, with the database name raw, which is **clicks back** how we defined it in our yml file.
-
-**Demo:** Pause the deck here and jump into the IDE to show the following:
-- Creating a .yml file and configuring sources (use text on Defining Sources slide)
-- Changing the direct table references in the stg_customers model
-- Show how the code compiles to the table reference based on the YML file
-- Asking learners for how to update the stg_orders and stg_payments model
-
-Then jump back to the slides to talk about source-freshness 🚀
-
-
 --
 
 {% include options/demo_prompt.html %}  
 
 ???
 Demo Time:
-- add source macro
+- in the stg_customers model, replace the direct table references with the source macro
 - run `dbt run`
 - this fails! Why does it fail?  (because we haven't added the sources.yml file. Do that now.)
-- add sources.yml with from a few slides back
-- preview data to show it works
-- show compiled sql to prove it translates to the database.schema.object expected
+- add sources.yml  (use text on Defining Sources slide)
+"Once you have defined a source in your .yml file, you can now utilize the source Jinja function to select from that source in a model.""
+
+- Preview data to show it works
+"The source function here will compile to the full object name in the database, so select star from source-jaffleshop will compile to raw.jaffleshop.customers, with the database name raw, which is **clicks back** how we defined it in our yml file.""
+
+- show Compiled sql to prove it translates to the database.schema.object expected
+- Asking learners for how to update the stg_orders and stg_payments model
+
+Then jump back to the slides to talk about source-freshness 🚀
 
 ---
 
